--- a/BleLibs/src/main/res/layout/item_scan_ble.xml
+++ b/BleLibs/src/main/res/layout/item_scan_ble.xml
@@ -124,6 +124,18 @@
             android:padding="8dp"
             android:text="打印bitmap"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_dex_update"
+            style="@style/text_30_54c727"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="bin文件更新"
+            android:textStyle="bold" />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
