--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tv_type"
                 android:layout_width="wrap_content"
@@ -25,19 +26,37 @@
                 android:textColor="#222222"
                 android:textSize="15sp"
                 android:textStyle="bold" />
+
             <EditText
                 android:id="@+id/et_mac"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="输入adress"
-                android:text="DC:0D:30:00:02:E5"/>
+                android:text="DC:0D:30:00:02:E5" />
+
             <EditText
                 android:id="@+id/et_print_page"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="输入page"
                 android:inputType="number"
-                android:text="2"/>
+                android:text="2" />
+
+            <EditText
+                android:id="@+id/et_pic_width"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="输入宽"
+                android:inputType="number"
+                android:text="48" />
+
+            <EditText
+                android:id="@+id/et_pic_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="输入高"
+                android:inputType="number"
+                android:text="48" />
 
             <TextView
                 android:id="@+id/tv_log"
@@ -54,9 +73,9 @@
         android:layout_gravity="center"
         android:layout_margin="19dp"
         android:layout_weight="4"
-        android:visibility="gone"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_device_name"
