--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/et_print_page"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="输入速度"
+                android:hint="请输入page"
                 android:inputType="number"
                 android:text="2" />
 
