0520  添加发送完命令

--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -27,53 +27,186 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/et_mac"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="输入adress"
-                android:text="DC:0D:30:00:02:E5" />
+                android:orientation="horizontal">
+                <TextView
+                    android:text="蓝牙的mac::"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#222222"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+                <EditText
+                    android:id="@+id/et_mac"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="输入adress"
+                    android:text="DC:0D:30:00:02:E5" />
+            </LinearLayout>
 
-            <EditText
-                android:id="@+id/et_print_page"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="请输入page"
-                android:inputType="number"
-                android:text="2" />
+                android:orientation="horizontal">
+                <TextView
+                    android:text="打印page::"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#222222"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/et_print_speed"
+                <EditText
+                    android:id="@+id/et_print_page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="请输入page"
+                    android:inputType="number"
+                    android:text="1" />
+            </LinearLayout>
+
+
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="请输入速度"
-                android:inputType="number"
-                android:text="4" />
-            <EditText
-                android:id="@+id/et_print_concentration"
+                android:orientation="horizontal">
+                <TextView
+                    android:text="打印速度::"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#222222"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/et_print_speed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="请输入速度"
+                    android:inputType="number"
+                    android:text="4" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="请输入浓度"
-                android:inputType="number"
-                android:text="4" />
+                android:orientation="horizontal">
+                <TextView
+                    android:text="打印浓度::"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#222222"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/et_pic_width"
+                <EditText
+                    android:id="@+id/et_print_concentration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="请输入浓度"
+                    android:inputType="number"
+                    android:text="4" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="输入宽"
-                android:inputType="number"
-                android:text="48" />
+                android:orientation="horizontal">
+                <TextView
+                    android:text="图片宽度::"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#222222"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/et_pic_height"
+                <EditText
+                    android:id="@+id/et_pic_width"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="输入宽"
+                    android:inputType="number"
+                    android:text="48" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="输入高"
-                android:inputType="number"
-                android:text="48" />
+                android:orientation="horizontal">
+                <TextView
+                    android:text="图片高度::"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#222222"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/et_pic_height"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="输入高"
+                    android:inputType="number"
+                    android:text="48" />
+
+            </LinearLayout>
 
 
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:text="黑标高度::"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#222222"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/et_heibiao_height"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="输入黑标高度"
+                    android:inputType="numberDecimal"
+                    android:text="0.0" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:text="黑标偏移::"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#222222"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/et_heibiao_offset"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="输入黑标偏移"
+                    android:inputType="numberDecimal"
+                    android:text="0.0" />
+
+            </LinearLayout>
 
 
             <TextView
@@ -161,7 +294,39 @@
             android:padding="8dp"
             android:text="打印自检页"
             android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tv_heibiao"
+            style="@style/text_30_54c727"
+            android:layout_height="0dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="发送黑标纸张命令"
+            android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/tv_jianxi"
+            style="@style/text_30_54c727"
+            android:layout_height="0dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="发送间隙纸张命令"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/tv_lianxu"
+            style="@style/text_30_54c727"
+            android:layout_height="0dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="发送连续纸张命令"
+            android:textStyle="bold" />
         <TextView
             android:id="@+id/tv_shutdown"
             style="@style/text_30_54c727"
@@ -250,6 +415,7 @@
             android:text="新算法打印压缩bitmap"
             android:textStyle="bold" />
 
+
         <TextView
             android:id="@+id/tv_set_print_img4"
             style="@style/text_30_54c727"
@@ -258,6 +424,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="8dp"
+            android:visibility="gone"
             android:text="测试发送下一段"
             android:textStyle="bold" />
 
