--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="ff252525">#ff252525</color>
+    <color name="ffeaeaea">#ffeaeaea</color>
+    <color name="fff8f8f8">#fff8f8f8</color>
+    <color name="ff898989">#ff898989</color>
 </resources>
